# mma-14-07-25

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
models/: AddressBook.py  Birthday.py  Name.py  Note.py  NoteBook.py  Phone.py  Record.py  __init__.py  address_book.py  birthday.py  email_validator.py  phone.py  record.py
src/: main.py
src/models/: AddressBook.py  Email.py  Phone.py  Record.py
src/utils/: __init__.py  get_birthdays.py  table_provider.py
utils/: __init__.py  autocomplete.py  decorators.py  get_birthdays.py  handlers.py  parser.py  save_state.py  table_provider.py
