[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "contacts-notes-bot"
version = "0.1.0"
description = "Simple console bot for managing contacts and notes"
requires-python = ">=3.8"
dependencies = [
    "markdown-it-py>=3.0.0",
    "mdurl>=0.1.2",
    "Pygments>=2.19.2",
    "rich>=14.0.0",
    "pyreadline3>=3.5.4"
]

[project.scripts]
address_book = "main:run_bot"